Fix footer overlapping

--- a/src/app/components/book/newest-books/newest-books.component.css
+++ b/src/app/components/book/newest-books/newest-books.component.css
@@ -23,4 +23,8 @@
     .book {
         height: unset;
     }
+
+    .books {
+        margin-bottom: 100px;
+    }
 }
