--- a/src/app/components/book/user-books-reg/user-books-reg.component.css
+++ b/src/app/components/book/user-books-reg/user-books-reg.component.css
@@ -94,6 +94,6 @@
 }
 
 .findbooks {
-    float: right;
     margin-right: 40px;
+    margin-bottom: 100px;
 }
